Fix event sorting on mobile view

--- a/files/static/less/eventwidget.less
+++ b/files/static/less/eventwidget.less
@@ -72,7 +72,7 @@ section#events {
         background:@bedkom-color;
         color:@bedkom-color;
     }
-    
+
     /* Gets overridden below if needed */
     [class*='event-type-'] {
         .event-arrkom;
@@ -106,28 +106,45 @@ section#events {
     ul.event-list {
         list-style: none;
         margin-top: 8px;
+        padding: 0 15px;
 
         li {
             padding: 10px 0;
             border-bottom: 1px solid #e0e0e0;
             font-size: 14px;
-        }
-        li:last-child {
-            border: none;
-        }
 
-        li:last-child.border {
-            border-bottom: 1px solid #e0e0e0;
-        }
+            @media (min-width: 992px) {
+                width: 455px;
 
-        li span {
-            float: right;
-            color: #ccc;
-            color: #428bca;
-        }
+                &:nth-child(odd) {
+                    float: left;
+                }
+                &:nth-child(even) {
+                    float: right;
+                }
+            }
 
-        li a {
-            color: #666;
+            @media (min-width: 1200px) {
+                width: 555px;
+            }
+
+            &:last-child {
+                border: none;
+            }
+
+            &:last-child.border {
+                border-bottom: 1px solid #e0e0e0;
+            }
+
+            span {
+                float: right;
+                color: #ccc;
+                color: #428bca;
+            }
+
+            a {
+                color: #666;
+            }
         }
     }
 
@@ -145,4 +162,3 @@ section#events {
         }
     }
 }
-
